# drone-video-ai

./: .gitignore  pyproject.toml
.claude/: activity.md  router.md  sync-manifest.tsv
.claude/manuals/: agent-orchestration.md  session-discipline.md
.claude/specs/drone-video-pipeline/: plan.md  spec.md  tasks.md
.claude_plans/: reference-pack-expansion-prompts-2026-07-20.md
data/manifests/: split_001_s70.manifest.json
data/raw/DJI_0355/: manifest.json
data/reference_pack/exemplars/: 2geographers-cappadocia-balloon-valley.json  abc-news-volcano-crater-lava-fpv.json  abovehorizon-lyngen-alps-fjord.json  acopian-guilfoyle-washed-up-reynisfjara-dronie.json  alexandconi-mucangchai-rice-terraces.json  backman-family-monteverde-cloud-forest.json  bbc-earth-aerial.json  behindthemask-shark-dronie-underwater-selfie.json  captainvanover-fpv-cinematic-reel.json  chrisxgxc-the-last-dronie.json  columbus-ledger-enquirer-chattahoochee-river-rapids.json  dereksturman-west-desert-utah-sand-dunes.json  drone-awards-general.json  drone-photography-awards-wildlife.json  drone-racing-league-waterfall-fpv-dive.json  dronesnap-faroe-islands-drone-4k.json  dronestagram-feature.json  dronography-iceland-kirkjufell-aerial.json  ecksplorer-faroe-mulafossur-waterfall.json  elevatetheview-oahu-mermaid-cave-drone-view.json  explorertheworld4k-kyrgyzstan-wild-beauty.json  fishaholic-tt-tobago-lagoon-coastal.json  flaviufpv-madeira-fanal-forest-fpv.json  independent-landscape-cinematographer.json  instagram-elisacappelletti-monument-valley.json  jeremygilchristphotos-blue-ridge-parkway-autumn.json  jishinnraj-kyrgyzstan-sky-bridge.json  jml-films-matty-flip-fpv-freestyle-short.json  johnnyfpv-miami-freestyle-fpv.json  ledribfpv-cinematic-freestyle-flow.json  lido-wave-nazare-coastal.json  matthiasdangl-maldives-overwater-lagoon-fpv.json  mikeonthemove-fitzroy-patagonia-granite-peaks.json  natgeo-aerial-wildlife.json  nbcla-big-bear-mountain-first-snow.json  ny-drone-film-festival.json  onemanwolfpack-kyrgyzstan-bishkek-aerial.json  onzil-kyrgyzstan-issyk-kul-lake.json  ozzophotography-iceland-aurora-reykjanes.json  pgdrone-benagil-sea-cave-arch-coastal.json  (+18 more)
src/drone_video_ai/common/: ffprobe.py  manifest.py  schema.py
src/drone_video_ai/highlight_extraction/: cli.py  composite.py  gates.py  motion.py  pipeline.py  scoring_composition.py  scoring_exposure.py  scoring_motion_smoothness.py  scoring_sharpness.py  segmentation.py  weights.py
src/drone_video_ai/reel_stitching/: cli.py  color_pinning.py  edit_manifest.py  otio_export.py  pacing.py  render.py  verify.py
src/drone_video_ai/reference_pack/: README.md  schema.py  storage.py
tests/: conftest.py
tests/common/: test_manifest_schema.py
tests/highlight_extraction/: test_gates.py  test_pipeline_manifest_output.py  test_scoring_composition.py  test_scoring_exposure.py  test_scoring_motion_smoothness.py  test_scoring_sharpness.py  test_segmentation_boundaries.py
tests/reel_stitching/: conftest.py  test_concat_demuxer_framemd5.py  test_forbidden_filters_lint.py  test_otio_export.py  test_pacing_tolerance.py  test_xfade_color_metadata.py
tests/reference_pack/: test_schema_validation.py  test_storage_layout_no_arr_files.py
